--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,11 +5,13 @@
 }
 .logo{
   font-family: "Ultra", serif;
+  font-size: xx-large;
 }
 .navbar{
   justify-content: space-between;
   display: flex;
  align-items: center;
+ text-align: center;
 }
 .dropbtn {
   background: white;
@@ -32,13 +34,14 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 140px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
+  font-size:large;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -51,6 +54,6 @@
   display: block;
 }
 
-.loginButton{
-  border: 2px solid black;
+.side{
+  font-size: xx-large;
 }
